# vulkan-hello-triangle

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  build-generate.bat  build.bat  build.sh  clean.bat  readme.md
source/: Application.cpp  Application.h  main.cpp
source/shaders/: compile.bat  shader.frag
